[gd_scene load_steps=12 format=2]

[ext_resource path="res://projectiles/arrow.gd" type="Script" id=1]
[ext_resource path="res://asset/texture/arrow.png" type="Texture" id=2]
[ext_resource path="res://noise/noise.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/sound/loose_arrow.wav" type="AudioStream" id=4]
[ext_resource path="res://asset/sound/arrow_landed.wav" type="AudioStream" id=5]
[ext_resource path="res://projectiles/reparent_and_play.gd" type="Script" id=6]
[ext_resource path="res://asset/sound/arrow_hit.wav" type="AudioStream" id=7]
[ext_resource path="res://asset/sound/blocked_arrow.wav" type="AudioStream" id=8]
[ext_resource path="res://projectiles/arrow_hitbox.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[node name="arrow" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )
speed = 1100
recoil = 0
shooter_inertia = 1.0

[node name="terrain_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="terrain_area"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="player_area" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ttl" type="Timer" parent="."]
wait_time = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="noise" parent="." instance=ExtResource( 3 )]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="noise"]
shape = SubResource( 2 )
disabled = true

[node name="loose_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="landed_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="hit_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
script = ExtResource( 6 )

[node name="bounce_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="bounced" from="." to="bounce_audio" method="play"]
[connection signal="hit" from="." to="hit_audio" method="play"]
[connection signal="landed" from="." to="noise" method="activate"]
[connection signal="landed" from="." to="landed_audio" method="play"]
[connection signal="loose" from="." to="loose_audio" method="play"]
[connection signal="body_entered" from="terrain_area" to="." method="_on_terrain_area_body_entered"]
[connection signal="body_entered" from="player_area" to="." method="_on_player_area_body_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="ttl" to="." method="queue_free"]
